crates/backyard-parser/tests/snapshots/class__anonymous.snap
---
source: crates/backyard-parser/tests/class.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: assignment
    left:
      node_type: variable
      name:
        node_type: identifier
        name:
          - 97
        loc:
          start:
            line: 1
            column: 0
            offset: 0
          end:
            line: 1
            column: 1
            offset: 1
        leadings: ~
        trailings: ~
      loc:
        start:
          line: 1
          column: 0
          offset: 0
        end:
          line: 1
          column: 1
          offset: 1
      leadings: ~
      trailings: ~
    operator:
      - 61
    right:
      node_type: new
      statement:
        node_type: anonymous_class
        parameters: []
        extends: ~
        implements: []
        body:
          node_type: block
          statements: []
          loc:
            start:
              line: 1
              column: 15
              offset: 15
            end:
              line: 2
              column: 0
              offset: 17
          leadings: ~
          trailings: ~
        loc:
          start:
            line: 1
            column: 9
            offset: 9
          end:
            line: 2
            column: 0
            offset: 17
        leadings: ~
        trailings: ~
      loc:
        start:
          line: 1
          column: 5
          offset: 5
        end:
          line: 2
          column: 0
          offset: 17
      leadings: ~
      trailings: ~
    loc:
      start:
        line: 1
        column: 3
        offset: 3
      end:
        line: 2
        column: 0
        offset: 17
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 2
    column: 1
    offset: 18
leadings: ~
trailings: ~
