crates/backyard-parser/tests/snapshots/class__extended.snap
---
source: crates/backyard-parser/tests/class.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: class
    inheritance: ~
    name:
      node_type: identifier
      name:
        - 65
      loc:
        start:
          line: 1
          column: 6
          offset: 6
        end:
          line: 1
          column: 7
          offset: 7
      leadings: ~
      trailings: ~
    extends:
      node_type: identifier
      name:
        - 66
      loc:
        start:
          line: 1
          column: 16
          offset: 16
        end:
          line: 1
          column: 17
          offset: 17
      leadings: ~
      trailings: ~
    implements:
      - node_type: identifier
        name:
          - 67
        loc:
          start:
            line: 1
            column: 29
            offset: 29
          end:
            line: 1
            column: 30
            offset: 30
        leadings: ~
        trailings: ~
      - node_type: identifier
        name:
          - 68
        loc:
          start:
            line: 1
            column: 32
            offset: 32
          end:
            line: 1
            column: 33
            offset: 33
        leadings: ~
        trailings: ~
    body:
      node_type: block
      statements: []
      loc:
        start:
          line: 1
          column: 34
          offset: 34
        end:
          line: 2
          column: 0
          offset: 36
      leadings: ~
      trailings: ~
    is_readonly: false
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 2
        column: 0
        offset: 36
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 2
    column: 0
    offset: 36
leadings: ~
trailings: ~
