crates/backyard-parser/tests/snapshots/class__modifiers.snap
---
source: crates/backyard-parser/tests/class.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: class
    inheritance: Final
    name:
      node_type: identifier
      name: A
      loc:
        start:
          line: 1
          column: 21
          offset: 21
        end:
          line: 1
          column: 22
          offset: 22
      leadings: []
      trailings: []
    extends: ~
    implements: []
    body:
      node_type: block
      statements: []
      loc:
        start:
          line: 1
          column: 23
          offset: 23
        end:
          line: 2
          column: 0
          offset: 25
      leadings: []
      trailings: []
    is_readonly: true
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 2
        column: 0
        offset: 25
    leadings: []
    trailings: []
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 2
    column: 0
    offset: 25
leadings: []
trailings: []
