crates/backyard-parser/tests/snapshots/class__parameter.snap
---
source: crates/backyard-parser/tests/class.rs
expression: asts
snapshot_kind: text
---
leadings: []
trailings: []
node_type: program
children:
  - leadings: []
    trailings: []
    node_type: assignment
    left:
      leadings: []
      trailings: []
      node_type: variable
      name:
        leadings: []
        trailings: []
        node_type: identifier
        name: a
        loc:
          start:
            line: 1
            column: 0
            offset: 0
          end:
            line: 1
            column: 1
            offset: 1
      loc:
        start:
          line: 1
          column: 0
          offset: 0
        end:
          line: 1
          column: 1
          offset: 1
    operator: "="
    right:
      leadings: []
      trailings: []
      node_type: new
      statement:
        leadings: []
        trailings: []
        node_type: anonymous_class
        parameters:
          - leadings: []
            trailings: []
            node_type: variable
            name:
              leadings: []
              trailings: []
              node_type: identifier
              name: b
              loc:
                start:
                  line: 1
                  column: 15
                  offset: 15
                end:
                  line: 1
                  column: 16
                  offset: 16
            loc:
              start:
                line: 1
                column: 15
                offset: 15
              end:
                line: 1
                column: 16
                offset: 16
        extends: ~
        implements: []
        body:
          leadings: []
          trailings: []
          node_type: block
          statements: []
          loc:
            start:
              line: 1
              column: 19
              offset: 19
            end:
              line: 2
              column: 0
              offset: 21
        loc:
          start:
            line: 1
            column: 9
            offset: 9
          end:
            line: 2
            column: 0
            offset: 21
      loc:
        start:
          line: 1
          column: 5
          offset: 5
        end:
          line: 2
          column: 0
          offset: 21
    loc:
      start:
        line: 1
        column: 3
        offset: 3
      end:
        line: 2
        column: 0
        offset: 21
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 2
    column: 1
    offset: 22
